@@ -1,6 +1,8 @@
 0.11.103
 	+ Added .field_help class in public.css
 	+ Add field help to modelView.mas
+	+ Stripe tables in hang table
+	+ Use again the load gif when switching tabs
 0.11.102
 	+ Added `override_user_modification` configuration parameter to
 	avoid user modification checkings and override them without asking
